--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                 <a class="nav-link" href="#home">Home</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="#work">work</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="#about">About</a>
               </li>
               <li class="nav-item">
@@ -41,17 +44,21 @@
       </nav>
 
       <div id="content-wrapper">
-        <section id="home">
+        <section id="home" class="full-height px-lg-5">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8">
-                        <h1>I AM A SOFTWARE ENGINEER FROM SEATTLE, WA</h1>
-                        <p>I am Jacob Messou. I am a freshly graduated software engineer</p>
-                        <a href="#works" class="btn-btn-brand">Explore my works</a>
+                        <h1 class="display-4 fw-bold">I AM A <span class="text-brand">SOFTWARE ENGINEER</span> FROM SEATTLE, WA</h1>
+                        <p class="lead mt-2 mb-4">I am Jacob Messou. I am a freshly graduated software engineer</p>
+                        <a href="#work" class="btn btn-brand me-3">Explore my work</a>
                         <a href="#" class="link-custom">Call: (206) 495 7699</a>
                     </div>
                 </div>
             </div>
+        </section>
+
+        <section id="work" class="full-height px-lg-5">
+          
         </section>
 
       </div>
